--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "@playwright/test": "^1.20.2",
     "cypress": "^6.9.1",
     "jest": "^27.5.1"
+  },
+  "dependencies": {
+    "node-fetch": "2.6.7"
   }
 }
